--- a/Loja-WEB/web/resources/css/cssLayout.css
+++ b/Loja-WEB/web/resources/css/cssLayout.css
@@ -15,13 +15,12 @@
 }
 
 #bottom {
-    position: absolute;
+    position: relative;
     background-color: #EEE;
     padding: 5px;
     margin: 10px 0px 0px 0px;
-    bottom: 0;
-    right: 10px;
-    text-align: right;
+    bottom: -10px;
+    text-align: center;
     -webkit-border-radius: 15px 15px 0 0;
     -moz-border-radius: 15px 15px 0 0;
     -border-radius: 15px 15px 0 0;
