--- a/Loja-WEB/web/resources/css/cssLayout.css
+++ b/Loja-WEB/web/resources/css/cssLayout.css
@@ -15,24 +15,28 @@
 }
 
 #bottom {
-    position: relative;
+    position: absolute;
     background-color: #EEE;
-    padding: 5px;
-    margin: 10px 0px 0px 0px;
-    bottom: -10px;
+    margin: 20px 0 0 0;
     text-align: center;
     -webkit-border-radius: 15px 15px 0 0;
     -moz-border-radius: 15px 15px 0 0;
     -border-radius: 15px 15px 0 0;
     border: 1px solid #DDD;
     box-shadow: 1px 1px 10px #363636;
+    width: 98%;
+    padding: 5px;
 }
 
 #left {
     float: left;
-    background-color: #eee;
+    background-color: white;
     padding: 5px;
     width: 150px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -border-radius: 10px;
+    box-shadow: 0 0 10px #CCC;
 }
 
 #right {
@@ -57,6 +61,7 @@
     -moz-border-radius: 10px;
     -border-radius: 10px;
     box-shadow: 0 0 15px #aaa;
+    min-height: 200px;
 }
 
 .right_content {
