--- a/Loja-WEB/web/resources/css/loja.css
+++ b/Loja-WEB/web/resources/css/loja.css
@@ -44,3 +44,8 @@ root {
     background-position: 0 -40px !important;
     background-color: #2D7DC5 !important;
 }
+
+#lista\:tabelaProdutos
+{
+    margin-top: 30px;
+}
