--- a/Loja-WEB/web/resources/css/cssLayout.css
+++ b/Loja-WEB/web/resources/css/cssLayout.css
@@ -1,4 +1,3 @@
-
 #top {
     position: relative;
     background-color: #EFEFEF;
@@ -22,7 +21,7 @@
     -moz-border-radius: 15px 15px 0 0;
     -border-radius: 15px 15px 0 0;
     border: 1px solid #DDD;
-    box-shadow: 1px 1px 10px #363636;
+    box-shadow: 0px 0px 10px #000;
     padding: 5px;
 }
 
@@ -34,19 +33,19 @@
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -border-radius: 10px;
-    box-shadow: 0 0 10px #CCC;
+    box-shadow: 0 0 10px #000;
 }
 
 #centro {
     position: relative;
     background-color: white;
     padding: 5px;
-    margin-left: 225px;
+    margin-left: 220px;
     border: 1px solid #EEE;
     -webkit-border-radius: 10px;
     -moz-border-radius: 10px;
     -border-radius: 10px;
-    box-shadow: 0 0 15px #aaa;
+    box-shadow: 0 0 10px #000;
     height: 100%;
 }
 
