preco mais bonito

--- a/Loja-WEB/web/resources/css/loja.css
+++ b/Loja-WEB/web/resources/css/loja.css
@@ -57,5 +57,11 @@ body {
 .preco {
     color: green;
     font-weight: bold;
+    font-size: 20px;
+}
+
+.data {
+    color: red;
+    font-weight: bold;
     font-size: 15px;
 }
