--- a/Loja-WEB/web/resources/css/loja.css
+++ b/Loja-WEB/web/resources/css/loja.css
@@ -1,26 +1,36 @@
-/* 
-    Document   : loja
-    Created on : May 20, 2011, 10:47:16 AM
-    Author     : carlos
-    Description:
-        Purpose of the stylesheet follows.
-*/
-
-
 root { 
     display: block;
 }
 
-body {
-    background-color: #1E90FF; 
+*{
+    font-family: 'Ubuntu', arial, serif;
 }
 
+body {
+    background-color: #1E90FF;
+    font-size: 12px;
+    color: #000000;  
+    margin: 10px;
+}
 
-@font-face {
-    font-family: 'Ubuntu';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Ubuntu'), url('./resources/Ubuntu-Regular.woff') format('woff');
+h1 {
+    font-family: 'Indie Flower', arial, serif;
+    font-weight: bold;
+    margin: 0px;
+    padding: 0px;
+    color: #363636;
+}
+
+a:link, a:visited {
+    color: #363636;
+    font-weight : bold;
+    text-decoration: none;
+}
+
+a:link:hover, a:visited:hover  {
+    color: #363636;
+    font-weight : bold;
+    text-decoration : underline;
 }
 
 #lista\:tabelaProdutos
@@ -64,4 +74,9 @@ body {
     color: red;
     font-weight: bold;
     font-size: 15px;
+}
+
+.rodape {
+    font-size: 12px;
+    text-align: center;
 }
